--- a/app/marko/package.json
+++ b/app/marko/package.json
@@ -27,7 +27,7 @@
     "README.md",
     "*.js",
     "*.d.ts",
-    "ts3.5/**/*"
+    "ts3.7/**/*"
   ],
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
@@ -52,5 +52,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "57798a108e183d97f94fd4cc396e45e1d4b04d23"
+  "gitHead": "57798a108e183d97f94fd4cc396e45e1d4b04d23",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.7/*"
+      ]
+    }
+  }
 }
