--- a/app/riot/package.json
+++ b/app/riot/package.json
@@ -28,7 +28,7 @@
     "standalone.js",
     "*.js",
     "*.d.ts",
-    "ts3.5/**/*"
+    "ts3.7/**/*"
   ],
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
@@ -42,10 +42,10 @@
     "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.7.0"
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-flow": "^7.10.4",
+    "@babel/preset-react": "^7.10.4"
   },
   "peerDependencies": {
     "@babel/core": "*",
@@ -61,5 +61,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "57798a108e183d97f94fd4cc396e45e1d4b04d23"
+  "gitHead": "57798a108e183d97f94fd4cc396e45e1d4b04d23",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.7/*"
+      ]
+    }
+  }
 }
