--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -28,7 +28,7 @@
     "README.md",
     "*.js",
     "*.d.ts",
-    "ts3.5/**/*",
+    "ts3.7/**/*",
     "versions.json"
   ],
   "scripts": {
@@ -37,8 +37,8 @@
     "postversion": "node -r esm ./scripts/generate-sb-packages-versions.js"
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/core": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@storybook/codemod": "6.1.0-alpha.10",
     "@storybook/node-logger": "6.1.0-alpha.10",
     "@storybook/semver": "^7.3.2",
@@ -76,5 +76,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "57798a108e183d97f94fd4cc396e45e1d4b04d23"
+  "gitHead": "57798a108e183d97f94fd4cc396e45e1d4b04d23",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.7/*"
+      ]
+    }
+  }
 }
