ci: run Angular E2E tests on executors with the latest version of Node 12

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,19 @@ executors:
         environment:
           NODE_OPTIONS: --max_old_space_size=4096
     resource_class: <<parameters.class>>
+  sb_node_12:
+    parameters:
+      class:
+        description: The Resource class
+        type: enum
+        enum: ['small', 'medium', 'large', 'xlarge']
+        default: 'medium'
+    working_directory: /tmp/storybook
+    docker:
+      - image: circleci/node:12-browsers
+        environment:
+          NODE_OPTIONS: --max_old_space_size=4096
+    resource_class: <<parameters.class>>
 
 jobs:
   build:
@@ -185,6 +198,38 @@ jobs:
       - run:
           name: run e2e tests
           command: yarn test:e2e-framework
+      - store_artifacts:
+          path: /tmp/storybook/cypress
+          destination: cypress
+  examples-v2-angular:
+    executor:
+      class: medium
+      name: sb_node_12
+    working_directory: /tmp/storybook
+    parallelism: 2
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: Running local registry
+          command: yarn local-registry --port 6000 --open
+          background: true
+      - run:
+          name: Wait for registry
+          command: yarn wait-on http://localhost:6000
+      - run:
+          name: Set registry
+          command: yarn config set registry http://localhost:6000/
+      - run:
+          name: Test local registry
+          command: yarn info @storybook/core
+      - run:
+          name: Install Cypress binary
+          command: yarn cypress install
+      - run:
+          name: Run e2e tests
+          command: yarn test:e2e-framework angular@latest angular@v9-lts
       - store_artifacts:
           path: /tmp/storybook/cypress
           destination: cypress
@@ -400,6 +445,9 @@ workflows:
             - install-e2e-deps
             - build
       - examples-v2:
+          requires:
+            - publish
+      - examples-v2-angular:
           requires:
             - publish
       - examples-v2-yarn-2:
