--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-storyshots",
-  "version": "6.1.0-alpha.25",
+  "version": "6.1.0-alpha.26",
   "description": "StoryShots is a Jest Snapshot Testing Addon for Storybook.",
   "keywords": [
     "addon",
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "@jest/transform": "^26.0.0",
-    "@storybook/addons": "6.1.0-alpha.25",
-    "@storybook/client-api": "6.1.0-alpha.25",
-    "@storybook/core": "6.1.0-alpha.25",
+    "@storybook/addons": "6.1.0-alpha.26",
+    "@storybook/client-api": "6.1.0-alpha.26",
+    "@storybook/core": "6.1.0-alpha.26",
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.1",
     "@types/jest-specific-snapshot": "^0.5.3",
@@ -53,8 +53,8 @@
     "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "6.1.0-alpha.25",
-    "@storybook/react": "6.1.0-alpha.25",
+    "@storybook/addon-docs": "6.1.0-alpha.26",
+    "@storybook/react": "6.1.0-alpha.26",
     "babel-loader": "^8.0.6",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.4.1",
@@ -64,18 +64,18 @@
   },
   "peerDependencies": {
     "@storybook/vue": "*",
-    "vue": "*",
     "jest-preset-angular": "*",
-    "jest-vue-preprocessor": "*"
+    "jest-vue-preprocessor": "*",
+    "vue": "*"
   },
   "peerDependenciesMeta": {
+    "@storybook/vue": {
+      "optional": true
+    },
     "jest-preset-angular": {
       "optional": true
     },
     "jest-vue-preprocessor": {
-      "optional": true
-    },
-    "@storybook/vue": {
       "optional": true
     },
     "vue": {
