--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -134,8 +134,12 @@
     "webpack-virtual-modules": "^0.2.2"
   },
   "devDependencies": {
-    "@types/mock-fs": "^4.10.0",
+    "@types/case-sensitive-paths-webpack-plugin": "^2.1.4",
+    "@types/dotenv-webpack": "^3.0.0",
     "@types/interpret": "^1.1.1",
+    "@types/mock-fs": "^4.10.0",
+    "@types/terser-webpack-plugin": "^5.0.0",
+    "@types/webpack-virtual-modules": "^0.1.0",
     "mock-fs": "^4.12.0"
   },
   "peerDependencies": {
