--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -135,11 +135,17 @@
   },
   "devDependencies": {
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.4",
+    "@types/connect": "^3.4.33",
+    "@types/cpy": "^7.1.3",
     "@types/dotenv-webpack": "^3.0.0",
     "@types/interpret": "^1.1.1",
+    "@types/ip": "^1.1.0",
     "@types/mock-fs": "^4.10.0",
     "@types/react-dev-utils": "^9.0.4",
+    "@types/serve-favicon": "^2.5.0",
     "@types/terser-webpack-plugin": "^5.0.0",
+    "@types/webpack-dev-middleware": "^3.7.2",
+    "@types/webpack-hot-middleware": "^2.25.3",
     "@types/webpack-virtual-modules": "^0.1.0",
     "mock-fs": "^4.12.0"
   },
