--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -73,7 +73,7 @@
     "@angular/platform-browser-dynamic": ">=6.0.0",
     "@babel/core": "*",
     "rxjs": "^6.0.0",
-    "typescript": "^3.4.0",
+    "typescript": "^3.4.0 || >=4.0.0",
     "zone.js": "^0.8.29 || ^0.9.0 || ^0.10.0"
   },
   "engines": {
