--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.1",
+    "@babel/generator": "^7.12.1",
     "@babel/parser": "^7.12.3",
     "@babel/plugin-transform-react-jsx": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
