--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -37,7 +37,7 @@
     "@storybook/node-logger": "6.1.0-alpha.29",
     "@storybook/theming": "6.1.0-alpha.29",
     "core-js": "^3.0.1",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "ts-dedent": "^1.1.1"
   },
