--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -38,7 +38,7 @@
     "@storybook/api": "6.1.0-alpha.29",
     "@storybook/node-logger": "6.1.0-alpha.29",
     "core-js": "^3.0.1",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "react-is": "^16.8.0",
     "regenerator-runtime": "^0.13.3",
