--- a/addons/google-analytics/package.json
+++ b/addons/google-analytics/package.json
@@ -24,7 +24,7 @@
     "@storybook/core-events": "6.1.0-alpha.29",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "react-ga": "^2.5.7",
     "regenerator-runtime": "^0.13.3"
