--- a/addons/knobs/package.json
+++ b/addons/knobs/package.json
@@ -44,7 +44,7 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qs": "^6.6.0",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
     "react-lifecycles-compat": "^3.0.4",
