--- a/addons/toolbars/package.json
+++ b/addons/toolbars/package.json
@@ -35,7 +35,7 @@
     "@storybook/client-api": "6.1.0-alpha.29",
     "@storybook/components": "6.1.0-alpha.29",
     "core-js": "^3.0.1",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3"
   },
   "publishConfig": {
