--- a/addons/viewport/package.json
+++ b/addons/viewport/package.json
@@ -39,7 +39,7 @@
     "global": "^4.3.2",
     "memoizerific": "^1.11.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3"
   },
