--- a/lib/addons/package.json
+++ b/lib/addons/package.json
@@ -36,7 +36,7 @@
     "@storybook/theming": "6.1.0-alpha.29",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3"
   },
