--- a/lib/client-api/package.json
+++ b/lib/client-api/package.json
@@ -41,7 +41,7 @@
     "lodash": "^4.17.15",
     "memoizerific": "^1.11.3",
     "qs": "^6.6.0",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3",
     "stable": "^0.1.8",
