--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -112,7 +112,7 @@
     "pretty-hrtime": "^1.0.3",
     "qs": "^6.6.0",
     "raw-loader": "^4.0.1",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3",
