--- a/lib/router/package.json
+++ b/lib/router/package.json
@@ -34,7 +34,7 @@
     "global": "^4.3.2",
     "memoizerific": "^1.11.3",
     "qs": "^6.6.0",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3"
   },
   "publishConfig": {
