--- a/lib/source-loader/package.json
+++ b/lib/source-loader/package.json
@@ -38,7 +38,7 @@
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.15",
     "prettier": "~2.0.5",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3",
     "source-map": "^0.7.3"
