--- a/lib/theming/package.json
+++ b/lib/theming/package.json
@@ -38,7 +38,7 @@
     "global": "^4.3.2",
     "memoizerific": "^1.11.3",
     "polished": "^3.4.4",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "resolve-from": "^5.0.0",
     "ts-dedent": "^1.1.1"
