--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-jest",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "description": "React storybook addon that show component jest report",
   "keywords": [
     "addon",
@@ -35,11 +35,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.27",
-    "@storybook/api": "6.0.27",
-    "@storybook/components": "6.0.27",
-    "@storybook/core-events": "6.0.27",
-    "@storybook/theming": "6.0.27",
+    "@storybook/addons": "6.0.28-alpha.0",
+    "@storybook/api": "6.0.28-alpha.0",
+    "@storybook/components": "6.0.28-alpha.0",
+    "@storybook/core-events": "6.0.28-alpha.0",
+    "@storybook/theming": "6.0.28-alpha.0",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.8.3 || ^17.0.0",
