--- a/addons/knobs/package.json
+++ b/addons/knobs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-knobs",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "description": "Storybook Addon Prop Editor Component",
   "keywords": [
     "addon",
@@ -29,13 +29,13 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.27",
-    "@storybook/api": "6.0.27",
-    "@storybook/channels": "6.0.27",
-    "@storybook/client-api": "6.0.27",
-    "@storybook/components": "6.0.27",
-    "@storybook/core-events": "6.0.27",
-    "@storybook/theming": "6.0.27",
+    "@storybook/addons": "6.0.28-alpha.0",
+    "@storybook/api": "6.0.28-alpha.0",
+    "@storybook/channels": "6.0.28-alpha.0",
+    "@storybook/client-api": "6.0.28-alpha.0",
+    "@storybook/components": "6.0.28-alpha.0",
+    "@storybook/core-events": "6.0.28-alpha.0",
+    "@storybook/theming": "6.0.28-alpha.0",
     "copy-to-clipboard": "^3.0.8",
     "core-js": "^3.0.1",
     "escape-html": "^1.0.3",
