--- a/examples/cra-react15/package.json
+++ b/examples/cra-react15/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-react15",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "private": true,
   "scripts": {
     "build": "react-scripts build",
@@ -18,11 +18,11 @@
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.0.27",
-    "@storybook/addon-links": "6.0.27",
-    "@storybook/addons": "6.0.27",
-    "@storybook/react": "6.0.27",
-    "@storybook/theming": "6.0.27",
+    "@storybook/addon-actions": "6.0.28-alpha.0",
+    "@storybook/addon-links": "6.0.28-alpha.0",
+    "@storybook/addons": "6.0.28-alpha.0",
+    "@storybook/react": "6.0.28-alpha.0",
+    "@storybook/theming": "6.0.28-alpha.0",
     "babel-core": "6",
     "babel-runtime": "6"
   },
