--- a/examples/cra-ts-essentials/package.json
+++ b/examples/cra-ts-essentials/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-ts-essentials",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "private": true,
   "scripts": {
     "build": "react-scripts build",
@@ -34,10 +34,10 @@
     "typescript": "3.8.3"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "6.0.27",
-    "@storybook/addons": "6.0.27",
+    "@storybook/addon-essentials": "6.0.28-alpha.0",
+    "@storybook/addons": "6.0.28-alpha.0",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "6.0.27"
+    "@storybook/react": "6.0.28-alpha.0"
   },
   "storybook": {
     "chromatic": {
