--- a/examples/standalone-preview/package.json
+++ b/examples/standalone-preview/package.json
@@ -1,12 +1,12 @@
 {
   "name": "standalone-preview",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "private": true,
   "scripts": {
     "storybook": "parcel ./storybook.html --port 1337"
   },
   "devDependencies": {
-    "@storybook/react": "6.0.27",
+    "@storybook/react": "6.0.28-alpha.0",
     "parcel": "^1.12.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
