--- a/lib/channel-postmessage/package.json
+++ b/lib/channel-postmessage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/channel-postmessage",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "description": "",
   "keywords": [
     "storybook"
@@ -28,9 +28,9 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/channels": "6.0.27",
-    "@storybook/client-logger": "6.0.27",
-    "@storybook/core-events": "6.0.27",
+    "@storybook/channels": "6.0.28-alpha.0",
+    "@storybook/client-logger": "6.0.28-alpha.0",
+    "@storybook/core-events": "6.0.28-alpha.0",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "qs": "^6.6.0",
