--- a/lib/client-api/package.json
+++ b/lib/client-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/client-api",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "description": "Storybook Client API",
   "keywords": [
     "storybook"
@@ -28,11 +28,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.27",
-    "@storybook/channel-postmessage": "6.0.27",
-    "@storybook/channels": "6.0.27",
-    "@storybook/client-logger": "6.0.27",
-    "@storybook/core-events": "6.0.27",
+    "@storybook/addons": "6.0.28-alpha.0",
+    "@storybook/channel-postmessage": "6.0.28-alpha.0",
+    "@storybook/channels": "6.0.28-alpha.0",
+    "@storybook/client-logger": "6.0.28-alpha.0",
+    "@storybook/core-events": "6.0.28-alpha.0",
     "@storybook/csf": "0.0.1",
     "@types/qs": "^6.9.0",
     "@types/webpack-env": "^1.15.2",
