--- a/lib/client-logger/package.json
+++ b/lib/client-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/client-logger",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "description": "",
   "keywords": [
     "storybook"
