--- a/lib/core-events/package.json
+++ b/lib/core-events/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/core-events",
-  "version": "6.0.27",
+  "version": "6.0.28-alpha.0",
   "description": "Event names used in storybook core",
   "keywords": [
     "storybook"
