--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -104,7 +104,7 @@
     "lit-html": "^1.0.0",
     "prettier": "~2.0.5",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-is": "^16.12.0",
     "require-from-string": "^2.0.2",
     "rxjs": "^6.5.4",
