--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -45,7 +45,7 @@
     "popper.js": "^1.14.7",
     "react": "^16.8.3 || ^17.0.0",
     "react-color": "^2.17.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-popper-tooltip": "^2.11.0",
     "react-syntax-highlighter": "^12.2.1",
     "react-textarea-autosize": "^8.1.1",
