--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -51,7 +51,7 @@
     "polished": "^3.4.4",
     "qs": "^6.6.0",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-draggable": "^4.0.3",
     "react-helmet-async": "^1.0.2",
     "react-hotkeys": "2.0.0",
