--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -83,6 +83,7 @@
     "cli-table3": "0.6.0",
     "commander": "^5.0.0",
     "core-js": "^3.0.1",
+    "cpy": "^8.1.1",
     "css-loader": "^3.5.3",
     "detect-port": "^1.3.0",
     "dotenv-webpack": "^1.7.0",
