--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -75,8 +75,7 @@
     "@types/puppeteer-core": "^2.0.0",
     "@types/semver": "^7.2.0",
     "@types/shelljs": "^0.8.7",
-    "@types/update-notifier": "^0.0.30",
-    "rimraf": "^3.0.2"
+    "@types/update-notifier": "^0.0.30"
   },
   "peerDependencies": {
     "jest": "*"
