--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -32,9 +32,9 @@
     "versions.json"
   ],
   "scripts": {
-    "prepare": "node ../../scripts/prepare.js && node -r esm ./scripts/generate-sb-packages-versions.js",
+    "prepare": "node ../../scripts/prepare.js && node ./scripts/generate-sb-packages-versions.js",
     "test": "cd test && ./run_tests.sh",
-    "postversion": "node -r esm ./scripts/generate-sb-packages-versions.js"
+    "postversion": "node ./scripts/generate-sb-packages-versions.js"
   },
   "dependencies": {
     "@babel/core": "^7.12.3",
