--- a/package.json
+++ b/package.json
@@ -191,7 +191,7 @@
     "p-limit": "^2.3.0",
     "prettier": "~2.0.5",
     "raf": "^3.4.0",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
     "react-test-renderer": "^16.8.3",
     "recursive-copy": "^2.0.10",
